<resources>
    <string name="app_name">DragonBall_API_KC_Android</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title">Dragon Ball\'s Heroes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_prueba">texto prueba</string>
    <string name="actual_life">Actual Life</string>
    <string name="initial_points">Initial Points</string>
    <string name="curarse">Curar</string>
    <string name="life">Estatus de Vida</string>
    <string name="danyar">Dañar</string>
    <string name="luchar">Luchar</string>
</resources>