<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:alpha="0.75"
    android:background="@mipmap/dragon"
    tools:context=".ui.heroes_list.DetailFragment">


    <TextView
        android:id="@+id/tvDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:text="@string/password"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:padding="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detailphoto_heroe"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:padding="10dp"
            app:srcCompat="@mipmap/dragon_ball" />

    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:alpha="0.75"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDetail"
        app:layout_constraintVertical_bias="0.6">


        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/orange_juice"
            android:text="@string/life"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp">

            <TableRow
                android:id="@+id/tbRowOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/detail_heroInitialLife"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/orange_juice"
                    android:text="@string/initial_points"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLife"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/orange_juice"
                    android:text="initial points"
                    android:textColor="@color/orange"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:id="@+id/tbRowTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/heroActuallLife"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/orange_juice"
                android:text="@string/actual_life"
                android:textSize="17sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvDetailheroActualLife"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/orange_juice"
                android:text="initial points"
                android:textColor="@color/orange"
                android:textSize="17sp"
                android:textStyle="bold" />

            </TableRow>


            <TableRow
                android:id="@+id/tbRowThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:layout_margin="20dp"
                    android:id="@+id/bt_curarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="#0CDB0C"
                    android:layout_weight="1"
                    android:text="@string/curarse" />

                <com.google.android.material.button.MaterialButton
                    android:layout_margin="20dp"
                    android:id="@+id/bt_damage"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="#B40F00"
                    android:text="@string/danyar" />

            </TableRow>

            <TableRow
                android:id="@+id/tbRowFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <SeekBar
                    android:id="@+id/sbLive"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="100"
                    >

                </SeekBar>

            </TableRow>

            <TableRow
                android:id="@+id/tbRowFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_fight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#103A5F"
                    android:text="@string/luchar" />
            </TableRow>
        </TableLayout>


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
