<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@mipmap/dragon_ball"
    android:alpha="0.65"
    android:orientation="vertical"
    tools:context=".RootActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </com.google.android.material.card.MaterialCardView>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:alpha="0.80"
        android:background="@color/white"
        android:fontFamily="@font/orange_juice"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:hint="@string/email"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:fontFamily="@font/orange_juice"
        android:alpha="0.80"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"/>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/orange"
        android:alpha="0.80"
        android:textSize="25dp"
        android:fontFamily="@font/orange_juice"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>